src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated: Include in Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPurchaseAnalysisAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Analysis Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Purchase Analysis Account)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesRevenueAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general ledger account to which sales revenues for this product be posted.</description>
        <label>Sales Revenue Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxRule__c</fullName>
        <label>External Sales Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__Product_configsoprod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rootstock Configured Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>configsoprodProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Product_fromsf__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Product_fromsf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Product_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>icitemProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Product_invdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Products (Inventory Division)</relationshipLabel>
        <relationshipName>invdivProudcts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Product_peitemdesc__c</fullName>
        <label>Rootstock Mfg Item Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Product_reficitem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference an Inventory Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Product_refrtindoper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference an Independent Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Product_refsoprod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference a Configured Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rs_addprod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Rootstock Product Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rs_comcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>rstk__socomm__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rs_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rs_prodtype__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rs_product__c</fullName>
        <label>Rootstock Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rs_slsuom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Product_rtindoper__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Independent Operation</label>
        <referenceTo>rstk__rtindoper__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>rtindoperProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>rstk__AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>rstk__Product_rs_product__c</columns>
        <columns>rstk__Product_rs_div__c</columns>
        <columns>rstk__Product_rs_slsuom__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>rstk__Product_Description_Must_Match_Rootstock</fullName>
        <active>true</active>
        <description>Product Description must match Rootstock Mfg Item Description</description>
        <errorConditionFormula>AND(NOT( ISBLANK( rstk__Product_peitemdesc__c ) ), rstk__Product_peitemdesc__c !=  Description )</errorConditionFormula>
        <errorMessage>Product Description must match Rootstock Mfg Item Description</errorMessage>
    </validationRules>
</CustomObject>